--- a/style/estilo.css
+++ b/style/estilo.css
@@ -162,9 +162,9 @@ background-color: #084a8a;
 
 footer {
     background-color: var(--color-blanco);
-    border-top: 3px solid var(--color-secundario); 
+    border-top: 3px solid var(--color-secundario);
     padding: 30px 0;
-    margin-top: 50px; 
+    margin-top: 50px;
     text-align: center;
     box-shadow: 0 -4px 6px -1px rgba(0, 0, 0, 0.05);
 }
@@ -180,19 +180,15 @@ footer {
     display: flex;
     justify-content: center;
     gap: 25px;
-    margin-bottom: 10px;
 }
 
 .rss-icono {
     width: 35px;
     height: 35px;
-    transition: transform 0.4s ease, filter 0.3s;
-    filter: drop-shadow(0 2px 4px rgba(37, 99, 235, 0.2));
+    transition: transform 0.3s ease;
 }
 
-.rss-texto {
-    font-size: 0.8rem !important;
-    color: #64748b !important;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+.rss-icono:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
