--- a/style/estilo.css
+++ b/style/estilo.css
@@ -126,19 +126,25 @@ button:hover {
 .redes-container {
     display: flex;
     justify-content: center;
-    gap: 25px;
+    gap: 20px;
     margin-top: 20px;
+    padding-top: 20px;
+    border-top: 1px solid #f1f5f9;
 }
 
 .redes-container img {
-    filter: grayscale(100%); 
-    transition: 0.3s;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+    transition: 0.3s ease;
+    width: 30px !important; /* Reducido de 40px a 30px */
 }
 
 .redes-container img:hover {
-    filter: grayscale(0%); 
+    filter: grayscale(0%);
+    -webkit-filter: grayscale(0%);
     transform: scale(1.2);
 }
+
 button {
 background-color: #0a59a8;
 color: white;
